# bubble_cli

./: .gitignore  LICENSE  README.md  mcp_server.py  memody.md  pyproject.toml
src/bubble_cli/: __main__.py  api.py  banner.py  cli.py  config.py  db.py  i18n.py  mcp_server.py  prefs.py  schema.py  update.py
tests/: test_activate_mcp.py  test_concurrent_write.py  test_dry_run_mode.py  test_export.py  test_mcp_query.py  test_retry.py  test_whats_new.py
