[project]
name = "bubble-cli"
version = "0.1.0"
description = "CLI para extrair dados do Bubble.io via Data API para SQLite"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
bubble = "bubble_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bubble_cli"]
