[project]
name = "bubble-cli"
dynamic = ["version"]
description = "CLI para extrair dados do Bubble.io via Data API para SQLite"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.scripts]
bubble = "bubble_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/bubble_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bubble_cli"]

[tool.pytest.ini_options]
# Sem isso o pytest importa a cópia instalada em site-packages, não o working tree.
pythonpath = ["src"]
testpaths = ["tests"]
